--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-¨
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,18 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <link href="https://fonts.googleapis.com/css2? family = Raleway: wght @ 100 & display = swap"
+        rel="feuille de style">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <script src="https://kit.fontawesome.com/722f79bdc2.js" crossorigin="anonymous"></script>
     <title>Reservia</title>
 </head>
 <body>
-    <nav>
-      <img src="Projet 2 - Reservia\images\logo\Reservia@3x.png" alt="logo">
-      <ul>
-          <li>Hébergements</li>
-          <li>Activités</li>
-          <li>S'inscrire</li>
-      </ul>
-    </nav>
-</body>
+    <!-- HEADER -->
+    <header>
+        <nav>
+            <img src="Projet 2 - Reservia\images\logo\Reservia@3x.png" alt="logo">
+            <ul>
+                <li id="Hébergements">Hébergements</li>
+                <li>Activités</li>
+                <li id="Inscription">S'inscrire</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
 
-</html>
+    </main>
+</body>
+</htmhl>
