--- a/index.html
+++ b/index.html
@@ -9,23 +9,123 @@
     <link href="https://fonts.googleapis.com/css2? family = Raleway: wght @ 100 & display = swap"
         rel="feuille de style">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <script src="https://kit.fontawesome.com/722f79bdc2.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/22ee4f7d9a.js" crossorigin="anonymous"></script>
     <title>Reservia</title>
 </head>
+
 <body>
+
     <!-- HEADER -->
     <header>
-        <nav>
-            <img src="Projet 2 - Reservia\images\logo\Reservia@3x.png" alt="logo">
-            <ul>
-                <li id="Hébergements">Hébergements</li>
-                <li>Activités</li>
-                <li id="Inscription">S'inscrire</li>
-            </ul>
+        <nav id="sizeNAV">
+            <div class="flexBetween">
+                <div><img id="logo" src="/Projet 2 - Reservia\images\logo\Reservia@3x.png" alt="logo"></div>
+                <div class="flexAround sizeNav">
+                    <div class="sizeLinks flexCenter bordureNav1"><a class="decorationNone colorBlue"
+                            href="#">Hébergements</a></div>
+                    <div class="sizeLinks flexCenter bordureNav23"><a class="decorationNone colorNav2"
+                            href="#">Activités</a></div>
+                    <div class="sizeLinks flexCenter bordureNav23"><a class="decorationNone colorBlue"
+                            href="#">S'inscrire</a></div>
+                </div>
+            </div>
         </nav>
     </header>
+    <section>
+        <div>
+            <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+            <p>En plein centre ville ou en pleine nature</p>
+        </div>
+        <div class="flexCenter bordureSearch">
+            <div class="iconMap backGrey flexCenter"><i class="fas fa-map-marker-alt"></i></div>
+            <div><input id="searchBar" class="flexCenter bordureNone paddingSearch" type="search"
+                    value="Marseille, France"></div>
+            <div class="backBlue flexCenter searchButton">Rechercher</div>
+        </div>
+        <!-- FILTRES -->
+        <div class="filtres margFiltres">
+            <div class="margTitle">
+                <p>Filtres</p>
+            </div>
+            <div class="textIcons flexBetween"><i class="fas fa-money-bill-wave filtresIcons"></i>
+                <div class="filtresText flexCenter">Economique</div>
+            </div>
+            <div class="textIcons flexBetween"><i class="fas fa-child filtresIcons"></i>
+                <div class="filtresText flexCenter">Familial</div>
+            </div>
+            <div class="textIcons flexBetween"><i class="fas fa-heart filtresIcons"></i>
+                <div class="filtresText flexCenter">Romantique</div>
+            </div>
+            <div class="textIcons flexBetween"><i class="fas fa-dog filtresIcons"></i>
+                <div class="filtresText flexCenter">Animaux autorisés</div>
+            </div>
+        </div>
+        <div id="info">
+            <div class="parentIcon flexCenter"><i class="fas fa-info colorBlue fa-xs"></i></div>
+            <p>Plus de 500 logements sont disponibles dans cette ville</p>
+        </div>
+    </section>
     <main>
-
+        <section class="flexAround">
+            <div class="sizeHébergement backGrey blocsHébergement flexColumnAround">
+                <h3>Hébergements à Marseille</h3>
+                <div class="bloc1 flexBetween">
+                    <div>
+                       <div class="img1"></div>
+                       <div>
+                           <h3>Auberge de la Cannebière</h3>
+                           <p>Nuit à partir de 25€</p>
+                           <div>étoiles</div>
+                       </div> 
+                    </div>
+                    <div>
+                        <div class="img2"></div>
+                        <div>
+                            <h3>Hôtel du port</h3>
+                            <p>Nuit à partir de 52€</p>
+                            <div>étoiles</div>
+                        </div> 
+                     </div>
+                     <div>
+                        <div class="img3"></div>
+                        <div>
+                            <h3>Hôtel les mouettes</h3>
+                            <p>Nuit à partir de 76€</p>
+                            <div>étoiles</div>
+                        </div> 
+                     </div>
+                </div>
+                <div class="bloc2 flexBetween">
+                    <div>
+                       <div class="img4"></div>
+                       <div>
+                           <h3>Hôtel de la mer</h3>
+                           <p>Nuit à partir de 46€</p>
+                           <div>étoiles</div>
+                       </div> 
+                    </div>
+                    <div>
+                        <div class="img5"></div>
+                        <div>
+                            <h3>Auberge Le Panier</h3>
+                            <p>Nuit à partir de 23€</p>
+                            <div>étoiles</div>
+                        </div> 
+                     </div>
+                     <div>
+                        <div class="img6"></div>
+                        <div>
+                            <h3>Hôtel chez Amina</h3>
+                            <p>Nuit à partir de 96€</p>
+                            <div>étoiles</div>
+                        </div> 
+                     </div>
+                </div>
+                <div></div>
+                <p></p>
+            </div>
+            <div class="sizePopular backGrey"></div>
+        </section>
     </main>
 </body>
 </htmhl>
