Ajout du bloc Popuaires

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                     value="Marseille, France"></div>
             <div class="backBlue flexCenter searchButton">Rechercher</div>
         </div>
+
         <!-- FILTRES -->
+
         <div class="filtres margFiltres">
             <div class="margTitle">
                 <p>Filtres</p>
@@ -67,64 +69,101 @@
     </section>
     <main>
         <section class="flexAround">
+
+            <!-- HEBERGEMENTS -->
+
             <div class="sizeHébergement backGrey blocsHébergement flexColumnAround">
-                <h3>Hébergements à Marseille</h3>
+                <h2>Hébergements à Marseille</h2>
                 <div class="bloc1 flexBetween">
-                    <div>
-                       <div class="img1"></div>
-                       <div>
-                           <h3>Auberge de la Cannebière</h3>
-                           <p>Nuit à partir de 25€</p>
-                           <div>étoiles</div>
-                       </div> 
+                    <div class="cubeHébergement flexColumnCenter">
+                        <div class="img1"></div>
+                        <div class="detailsHébergement">
+                            <h3>Auberge de la Cannebière</h3>
+                            <p>Nuit à partir de 25€</p>
+                            <div>étoiles</div>
+                        </div>
                     </div>
-                    <div>
+                    <div class="cubeHébergement flexColumnCenter">
                         <div class="img2"></div>
-                        <div>
+                        <div class="detailsHébergement">
                             <h3>Hôtel du port</h3>
                             <p>Nuit à partir de 52€</p>
                             <div>étoiles</div>
-                        </div> 
-                     </div>
-                     <div>
+                        </div>
+                    </div>
+                    <div class="cubeHébergement flexColumnCenter">
                         <div class="img3"></div>
-                        <div>
+                        <div class="detailsHébergement">
                             <h3>Hôtel les mouettes</h3>
                             <p>Nuit à partir de 76€</p>
                             <div>étoiles</div>
-                        </div> 
-                     </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="bloc2 flexBetween">
-                    <div>
-                       <div class="img4"></div>
-                       <div>
-                           <h3>Hôtel de la mer</h3>
-                           <p>Nuit à partir de 46€</p>
-                           <div>étoiles</div>
-                       </div> 
+                    <div class="cubeHébergement flexColumnCenter">
+                        <div class="img4"></div>
+                        <div class="detailsHébergement">
+                            <h3>Hôtel de la mer</h3>
+                            <p>Nuit à partir de 46€</p>
+                            <div>étoiles</div>
+                        </div>
                     </div>
-                    <div>
+                    <div class="cubeHébergement flexColumnCenter">
                         <div class="img5"></div>
-                        <div>
+                        <div class="detailsHébergement">
                             <h3>Auberge Le Panier</h3>
                             <p>Nuit à partir de 23€</p>
                             <div>étoiles</div>
-                        </div> 
-                     </div>
-                     <div>
+                        </div>
+                    </div>
+                    <div class="cubeHébergement flexColumnCenter">
                         <div class="img6"></div>
-                        <div>
+                        <div class="detailsHébergement">
                             <h3>Hôtel chez Amina</h3>
                             <p>Nuit à partir de 96€</p>
                             <div>étoiles</div>
-                        </div> 
-                     </div>
+                        </div>
+                    </div>
                 </div>
                 <div></div>
-                <p></p>
+                <p class="textBold">Afficher plus</p>
             </div>
-            <div class="sizePopular backGrey"></div>
+
+            <!-- LES PLUS POPULAIRES -->
+
+            <div class="sizePopular backGrey blocPopulaires">
+                <div class="flexBetween">
+                    <h2>Les plus populaires</h2>
+                    <div><i class="fas fa-chart-line fa-2x"></i></div>
+                </div>
+                <div class="flexColumnAround">
+                    <div class="flexCenter cubePopulaires blocPop12">
+                        <div class="imgPopulaires1"></div>
+                        <div class="detailsPopulaires">
+                            <h3>Hôtel Le soleil du matin</h3>
+                            <p>Nuit à partir de 128€</p>
+                            <div>étoiles</div>
+                        </div>
+                    </div>
+                    <div class="flexCenter cubePopulaires blocPop12">
+                        <div class="imgPopulaires2"></div>
+                        <div class="detailsPopulaires">
+                            <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                            <p>Nuit à partir de 71€</p>
+                            <div>étoiles</div>
+                        </div>
+                    </div>
+                    <div class="flexCenter cubePopulaires">
+                        <div class="imgPopulaires3"></div>
+                        <div class="detailsPopulaires">
+                            <h3>Hôtel Tout bleu et Blanc</h3>
+                            <p>Nuit à partir de 68€</p>
+                            <div>étoiles</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
