Ajout des img dans html et début MEP des liens

--- a/index.html
+++ b/index.html
@@ -74,58 +74,113 @@
             <div id="ancre1" class="sizeHébergement backGrey blocsHébergement flexColumnAround">
                 <h2>Hébergements à Marseille</h2>
                 <div class="bloc1 flexBetween">
-                    <div class="cubeHébergement flexColumnCenter">
-                        <a href="#"><img class="img1" src="./Projet 2 - Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="image Auberge de la Cannebière"></a>
-                        <div class="detailsHébergement">
-                            <h3>Auberge de la Cannebière</h3>
-                            <p>Nuit à partir de 25€</p>
-                            <div>étoiles</div>
-                        </div>
-                    </div>
-                    <div class="cubeHébergement flexColumnCenter">
-                        <a href="#"><img class="img2" src="./Projet 2 - Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="image Hôtel du Port"></a>
-                        <div class="detailsHébergement">
-                            <h3>Hôtel du port</h3>
-                            <p>Nuit à partir de 52€</p>
-                            <div>étoiles</div>
-                        </div>
-                    </div>
-                    <div class="cubeHébergement flexColumnCenter">
-                        <a href="#"><img class="img3" src="./Projet 2 - Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="image Hôtel les mouettes"></a>
-                        <div class="detailsHébergement">
-                            <h3>Hôtel les mouettes</h3>
-                            <p>Nuit à partir de 76€</p>
-                            <div>étoiles</div>
-                        </div>
+                    <a href="#" class="decorationNone colorBlack">
+                        <div class="cubeHébergement flexColumnCenter">
+                            <img class="img1"
+                                src="./Projet 2 - Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                                alt="image Auberge de la Cannebière">
+                            <div class="detailsHébergement">
+                                <h3>Auberge de la Cannebière</h3>
+                                <p>Nuit à partir de 25€</p>
+                    </a>
+                    <div class="flexCenterStar"><i class="fas fa-star colorBlue"></i>
+                        <i class="fas fa-star colorBlue"></i>
+                        <i class="fas fa-star colorBlue"></i>
+                        <i class="fas fa-star colorBlue"></i>
+                        <i class="fas fa-star colorGrey"></i>
                     </div>
                 </div>
-                <div class="bloc2 flexBetween">
+
+            </div>
+            <a href="#" class="decorationNone colorBlack">
+                <div class="cubeHébergement flexColumnCenter">
+                    <img class="img2"
+                        src="./Projet 2 - Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                        alt="image Hôtel du Port">
+                    <div class="detailsHébergement">
+                        <h3>Hôtel du port</h3>
+                        <p>Nuit à partir de 52€</p>
+            </a>
+            <div class="flexCenterStar"><i class="fas fa-star colorBlue"></i>
+                <i class="fas fa-star colorBlue"></i>
+                <i class="fas fa-star colorBlue"></i>
+                <i class="fas fa-star colorBlue"></i>
+                <i class="fas fa-star colorBlue"></i>
+            </div>
+            </div>
+            </div>
+            <a href="#" class="decorationNone colorBlack">
+                <div class="cubeHébergement flexColumnCenter">
+                    <img class="img3"
+                        src="./Projet 2 - Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                        alt="image Hôtel les mouettes">
+                    <div class="detailsHébergement">
+                        <h3>Hôtel les mouettes</h3>
+                        <p>Nuit à partir de 76€</p>
+            </a>
+            <div class="flexCenterStar"><i class="fas fa-star colorBlue"></i>
+                <i class="fas fa-star colorBlue"></i>
+                <i class="fas fa-star colorBlue"></i>
+                <i class="fas fa-star colorBlue"></i>
+                <i class="fas fa-star colorGrey"></i>
+            </div>
+            </div>
+            </div>
+            </div>
+            <div class="bloc2 flexBetween">
+                <a href="#" class="decorationNone colorBlack">
                     <div class="cubeHébergement flexColumnCenter">
-                        <div class="img4"></div>
+                        <img class="img4"
+                            src="./Projet 2 - Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                            alt="image Hôtel de la mer">
                         <div class="detailsHébergement">
                             <h3>Hôtel de la mer</h3>
                             <p>Nuit à partir de 46€</p>
-                            <div>étoiles</div>
-                        </div>
-                    </div>
-                    <div class="cubeHébergement flexColumnCenter">
-                        <div class="img5"></div>
-                        <div class="detailsHébergement">
-                            <h3>Auberge Le Panier</h3>
-                            <p>Nuit à partir de 23€</p>
-                            <div>étoiles</div>
-                        </div>
-                    </div>
-                    <div class="cubeHébergement flexColumnCenter">
-                        <div class="img6"></div>
-                        <div class="detailsHébergement">
-                            <h3>Hôtel chez Amina</h3>
-                            <p>Nuit à partir de 96€</p>
-                            <div>étoiles</div>
-                        </div>
-                    </div>
+                </a>
+                <div class="flexCenterStar"><i class="fas fa-star colorBlue"></i>
+                    <i class="fas fa-star colorBlue"></i>
+                    <i class="fas fa-star colorBlue"></i>
+                    <i class="fas fa-star colorGrey"></i>
+                    <i class="fas fa-star colorGrey"></i>
                 </div>
-                <p class="textBold">Afficher plus</p>
+            </div>
+            </div>
+            <a href="#" class="decorationNone colorBlack">
+                <div class="cubeHébergement flexColumnCenter">
+                    <img class="img5"
+                        src="./Projet 2 - Reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                        alt="image Auberge Le Panier">
+                    <div class="detailsHébergement">
+                        <h3>Auberge Le Panier</h3>
+                        <p>Nuit à partir de 23€</p>
+            </a>
+            <div class="flexCenterStar"><i class="fas fa-star colorBlue"></i>
+                <i class="fas fa-star colorBlue"></i>
+                <i class="fas fa-star colorBlue"></i>
+                <i class="fas fa-star colorBlue"></i>
+                <i class="fas fa-star colorGrey"></i>
+            </div>
+            </div>
+            </div>
+            <a href="#" class="decorationNone colorBlack">
+                <div class="cubeHébergement flexColumnCenter">
+                    <img class="img6"
+                        src="./Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                        alt="image Hôtel chez Amina">
+                    <div class="detailsHébergement">
+                        <h3>Hôtel chez Amina</h3>
+                        <p>Nuit à partir de 96€</p>
+            </a>
+            <div class="flexCenterStar"><i class="fas fa-star colorBlue"></i>
+                <i class="fas fa-star colorBlue"></i>
+                <i class="fas fa-star colorBlue"></i>
+                <i class="fas fa-star colorBlue"></i>
+                <i class="fas fa-star colorBlue"></i>
+            </div>
+            </div>
+            </div>
+            </div>
+            <p class="textBold">Afficher plus</p>
             </div>
 
             <!-- LES PLUS POPULAIRES -->
@@ -137,27 +192,48 @@
                 </div>
                 <div class="flexColumnAround">
                     <div class="flexCenter cubePopulaires blocPop12">
-                        <div class="imgPopulaires1"></div>
+                        <img class="imgPopulaires1"
+                            src="./Projet 2 - Reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                            alt="image Hôtel le soleil du matin">
                         <div class="detailsPopulaires">
                             <h3>Hôtel Le soleil du matin</h3>
                             <p>Nuit à partir de 128€</p>
-                            <div>étoiles</div>
+                            <div class="flexCenterStar"><i class="fas fa-star colorBlue"></i>
+                                <i class="fas fa-star colorBlue"></i>
+                                <i class="fas fa-star colorBlue"></i>
+                                <i class="fas fa-star colorBlue"></i>
+                                <i class="fas fa-star colorBlue"></i>
+                            </div>
                         </div>
                     </div>
                     <div class="flexCenter cubePopulaires blocPop12">
-                        <div class="imgPopulaires2"></div>
+                        <img class="imgPopulaires2"
+                            src="./Projet 2 - Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                            alt="image Chambres d'hôtes">
                         <div class="detailsPopulaires">
                             <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                             <p>Nuit à partir de 71€</p>
-                            <div>étoiles</div>
+                            <div class="flexCenterStar"><i class="fas fa-star colorBlue"></i>
+                                <i class="fas fa-star colorBlue"></i>
+                                <i class="fas fa-star colorBlue"></i>
+                                <i class="fas fa-star colorBlue"></i>
+                                <i class="fas fa-star colorGrey"></i>
+                            </div>
                         </div>
                     </div>
                     <div class="flexCenter cubePopulaires">
-                        <div class="imgPopulaires3"></div>
+                        <img class="imgPopulaires3"
+                            src="./Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                            alt="image Hôtel tout bleu et Blanc">
                         <div class="detailsPopulaires">
                             <h3>Hôtel Tout bleu et Blanc</h3>
                             <p>Nuit à partir de 68€</p>
-                            <div>étoiles</div>
+                            <div class="flexCenterStar"><i class="fas fa-star colorBlue"></i>
+                                <i class="fas fa-star colorBlue"></i>
+                                <i class="fas fa-star colorBlue"></i>
+                                <i class="fas fa-star colorBlue"></i>
+                                <i class="fas fa-star colorGrey"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -169,55 +245,69 @@
         <section id="Activités">
             <h2 id="ancre2">Activités à Marseille</h2>
             <div class="blocActivités flexBetween">
-                <div class="cubeActivités14 flexColumnCenter">
-                    <div class="imgActivités1"></div>
+                <a href="#" class="decorationNone colorBlack">
+                    <div class="cubeActivités14 flexColumnCenter">
+                        <img class="imgActivités1"
+                            src="./Projet 2 - Reservia/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                            alt="image Vieux Port">
+                        <div class="titleActivités">
+                            <h3>Vieux Port</h3>
+                </a>
+            </div>
+            </div>
+
+            <div class="blocActivités2356 flexColumnBetween">
+                <div class="cubeActivités2356 flexColumnCenter">
+                    <img class="imgActivités2"
+                        src="./Projet 2 - Reservia/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                        alt="image Fort de Pomegues">
                     <div class="titleActivités">
-                        <h3>Vieux Port</h3>
+                        <h3>Fort de Pomegues</h3>
                     </div>
                 </div>
 
-                <div class="blocActivités2356 flexColumnBetween">
-                    <div class="cubeActivités2356 flexColumnCenter">
-                        <div class="imgActivités2"></div>
-                        <div class="titleActivités">
-                            <h3>Fort de Pomegues</h3>
-                        </div>
-                    </div>
-
-                    <div class="cubeActivités2356 flexColumnCenter">
-                        <div class="imgActivités3"></div>
-                        <div class="titleActivités">
-                            <h3>Iles du Frioul</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="cubeActivités14 flexColumnCenter">
-                    <div class="imgActivités4"></div>
+                <div class="cubeActivités2356 flexColumnCenter">
+                    <img class="imgActivités3"
+                        src="./Projet 2 - Reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                        alt="image Iles du Frioul">
                     <div class="titleActivités">
-                        <h3>Parc National des Calanques</h3>
+                        <h3>Iles du Frioul</h3>
+                    </div>
+                </div>
+            </div>
+            <a href="#" class="decorationNone colorBlack"><div class="cubeActivités14 flexColumnCenter">
+                <img class="imgActivités4"
+                    src="./Projet 2 - Reservia/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                    alt="image des Calanques">
+                <div class="titleActivités">
+                    <h3>Parc National des Calanques</h3></a>
+                </div>
+            </div>
+
+            <div class="blocActivités2356 flexColumnBetween">
+                <div class="cubeActivités2356 flexColumnCenter">
+                    <img class="imgActivités5"
+                        src="./Projet 2 - Reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                        alt="image Notre-Dame-de-la-Garde">
+                    <div class="titleActivités">
+                        <h3>Notre-Dame-de-la-Garde</h3>
                     </div>
                 </div>
 
-                <div class="blocActivités2356 flexColumnBetween">
-                    <div class="cubeActivités2356 flexColumnCenter">
-                        <div class="imgActivités5"></div>
-                        <div class="titleActivités">
-                            <h3>Notre-Dame-de-la-Garde</h3>
-                        </div>
-                    </div>
-
-                    <div class="cubeActivités2356 flexColumnCenter">
-                        <div class="imgActivités6"></div>
-                        <div class="titleActivités">
-                            <h3>Parc Longchamp</h3>
-                        </div>
+                <div class="cubeActivités2356 flexColumnCenter">
+                    <img class="imgActivités6"
+                        src="./Projet 2 - Reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                        alt="image Parc Longchamp">
+                    <div class="titleActivités">
+                        <h3>Parc Longchamp</h3>
                     </div>
                 </div>
+            </div>
             </div>
         </section>
     </main>
 
-<!-- FOOTER -->
+    <!-- FOOTER -->
 
     <footer class="flexAround">
         <div id="footerApropos">
