visualisation avant finalisation

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             href="#ancre1">Hébergements</a></div>
                     <div class="sizeLinks flexCenter bordureNav23"><a class="decorationNone colorNav2"
                             href="#ancre2">Activités</a></div>
-                    <p class="textBold sizeLinks flexCenter bordureNav23 decorationNone colorBlue">S'inscrire</p>
+                    <p class="textBold flexCenter bordureNav23 decorationNone colorBlue inscrire">S'inscrire</p>
                 </div>
             </div>
         </nav>
@@ -53,7 +53,7 @@
                     <div class="filtresText flexCenter">Economique</div>
                 </div>
                 <div class="textIcons flexBetween"><i class="fas fa-child filtresIcons"></i>
-                    <div class="filtresText flexCenter">Familial</div>
+                    <div class="filtresText flexCenter familial">Familial</div>
                 </div>
                 <div class="textIcons flexBetween"><i class="fas fa-heart filtresIcons"></i>
                     <div class="filtresText flexCenter">Romantique</div>
